# airdrawing-back

./: Dockerfile.back  compose.yaml  docker-compose-local.yaml  docker-compose-registry.yaml  pyproject.toml
.github/workflows/: docker-cd.yaml  docker-ci.yaml
src/: main.py
src/classes/: airdrawing.py
src/models/: models.py
src/test/: yolo_test.py
tests/: cst-back.yaml
